--- a/Python Final Project.ipynb
+++ b/Python Final Project.ipynb
@@ -1740,7 +1740,7 @@
     }
    ],
    "source": [
-    "# Create custom bins: start with -inf to 100, then regular 5-point bins\n",
+    "# Create custom bins: start with -inf to 100, then regular 10-point bins\n",
     "min_bin = -np.inf\n",
     "step = 10\n",
     "max_bin = int(opponent['PTS'].max())\n",
@@ -2085,7 +2085,7 @@
     "# Create labels for those bins\n",
     "labels = [f\"<{min_pts}\"] + [f\"{i}-{i+step}\" for i in middle_bins[:-1]] + [f\">={max_pts}\"]\n",
     "\n",
-    "# Apply to your scoring column (assuming 'PTS' is team points scored, not opponent's)\n",
+    "# Apply to your PTS column \n",
     "team_pts['PTS_Group'] = pd.cut(team_pts['PTS'], bins=bins, labels=labels, right=False)\n",
     "\n",
     "team_pts"
