Edited data frames

--- a/Python Final Project.ipynb
+++ b/Python Final Project.ipynb
@@ -226,27 +226,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "4dc2425e-9be6-4694-9f2e-810f837a3414",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/ryanoka/Downloads\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "os.chdir('/Users/ryanoka/Downloads')\n",
-    "print(os.getcwd())\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 79,
    "id": "82e61e17-d8e7-4af5-88d7-43f925d725b5",
    "metadata": {},
@@ -1832,6 +1811,196 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 97,
+   "id": "ef025d6a-8d0c-4f10-adbe-3ae838a6b217",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tm</th>\n",
+       "      <th>Data</th>\n",
+       "      <th>PTS</th>\n",
+       "      <th>AST</th>\n",
+       "      <th>TRB</th>\n",
+       "      <th>STL</th>\n",
+       "      <th>BLK</th>\n",
+       "      <th>TOV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ATL</td>\n",
+       "      <td>2024-10-23</td>\n",
+       "      <td>120</td>\n",
+       "      <td>25</td>\n",
+       "      <td>45</td>\n",
+       "      <td>12</td>\n",
+       "      <td>9</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ATL</td>\n",
+       "      <td>2024-10-25</td>\n",
+       "      <td>125</td>\n",
+       "      <td>25</td>\n",
+       "      <td>39</td>\n",
+       "      <td>11</td>\n",
+       "      <td>9</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ATL</td>\n",
+       "      <td>2024-10-27</td>\n",
+       "      <td>104</td>\n",
+       "      <td>24</td>\n",
+       "      <td>49</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ATL</td>\n",
+       "      <td>2024-10-28</td>\n",
+       "      <td>119</td>\n",
+       "      <td>32</td>\n",
+       "      <td>39</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ATL</td>\n",
+       "      <td>2024-10-30</td>\n",
+       "      <td>120</td>\n",
+       "      <td>28</td>\n",
+       "      <td>41</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>659</th>\n",
+       "      <td>WAS</td>\n",
+       "      <td>2024-11-26</td>\n",
+       "      <td>108</td>\n",
+       "      <td>27</td>\n",
+       "      <td>43</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>660</th>\n",
+       "      <td>WAS</td>\n",
+       "      <td>2024-11-27</td>\n",
+       "      <td>96</td>\n",
+       "      <td>21</td>\n",
+       "      <td>40</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>661</th>\n",
+       "      <td>WAS</td>\n",
+       "      <td>2024-11-30</td>\n",
+       "      <td>114</td>\n",
+       "      <td>24</td>\n",
+       "      <td>41</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>662</th>\n",
+       "      <td>WAS</td>\n",
+       "      <td>2024-12-03</td>\n",
+       "      <td>87</td>\n",
+       "      <td>18</td>\n",
+       "      <td>52</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>663</th>\n",
+       "      <td>WAS</td>\n",
+       "      <td>2024-12-05</td>\n",
+       "      <td>101</td>\n",
+       "      <td>25</td>\n",
+       "      <td>39</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>664 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Tm        Data  PTS  AST  TRB  STL  BLK  TOV\n",
+       "0    ATL  2024-10-23  120   25   45   12    9   16\n",
+       "1    ATL  2024-10-25  125   25   39   11    9   13\n",
+       "2    ATL  2024-10-27  104   24   49    7    4   19\n",
+       "3    ATL  2024-10-28  119   32   39   12    7   16\n",
+       "4    ATL  2024-10-30  120   28   41   10    2   15\n",
+       "..   ...         ...  ...  ...  ...  ...  ...  ...\n",
+       "659  WAS  2024-11-26  108   27   43    7    3   12\n",
+       "660  WAS  2024-11-27   96   21   40    9    4   20\n",
+       "661  WAS  2024-11-30  114   24   41    7    3   12\n",
+       "662  WAS  2024-12-03   87   18   52    4    8   20\n",
+       "663  WAS  2024-12-05  101   25   39   10    3   12\n",
+       "\n",
+       "[664 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "team_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "id": "962de85f-1f07-4bf1-8d1d-6bf03c6cd685",
    "metadata": {},
@@ -2858,6 +3027,221 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "id": "1979ba2f-58f4-4940-98d8-adc7674ffe16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tm</th>\n",
+       "      <th>Player</th>\n",
+       "      <th>Res</th>\n",
+       "      <th>PTS</th>\n",
+       "      <th>AST</th>\n",
+       "      <th>TRB</th>\n",
+       "      <th>STL</th>\n",
+       "      <th>BLK</th>\n",
+       "      <th>TOV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>517</th>\n",
+       "      <td>MIL</td>\n",
+       "      <td>Giannis Antetokounmpo</td>\n",
+       "      <td>W</td>\n",
+       "      <td>33.800000</td>\n",
+       "      <td>7.100000</td>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>1.700000</td>\n",
+       "      <td>4.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>683</th>\n",
+       "      <td>ORL</td>\n",
+       "      <td>Paolo Banchero</td>\n",
+       "      <td>W</td>\n",
+       "      <td>32.666667</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>1.333333</td>\n",
+       "      <td>1.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>CHO</td>\n",
+       "      <td>LaMelo Ball</td>\n",
+       "      <td>L</td>\n",
+       "      <td>32.416667</td>\n",
+       "      <td>6.583333</td>\n",
+       "      <td>4.833333</td>\n",
+       "      <td>1.083333</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>5.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>204</th>\n",
+       "      <td>DAL</td>\n",
+       "      <td>Luka Dončić</td>\n",
+       "      <td>L</td>\n",
+       "      <td>32.142857</td>\n",
+       "      <td>7.428571</td>\n",
+       "      <td>7.571429</td>\n",
+       "      <td>1.285714</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>238</th>\n",
+       "      <td>DEN</td>\n",
+       "      <td>Nikola Jokić</td>\n",
+       "      <td>W</td>\n",
+       "      <td>31.600000</td>\n",
+       "      <td>10.800000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>1.800000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>BOS</td>\n",
+       "      <td>Jordan Walsh</td>\n",
+       "      <td>L</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>598</th>\n",
+       "      <td>NYK</td>\n",
+       "      <td>Ariel Hukporti</td>\n",
+       "      <td>L</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>526</th>\n",
+       "      <td>MIL</td>\n",
+       "      <td>Stanley Umude</td>\n",
+       "      <td>L</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>602</th>\n",
+       "      <td>NYK</td>\n",
+       "      <td>Jacob Toppin</td>\n",
+       "      <td>L</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>BOS</td>\n",
+       "      <td>Jaden Springer</td>\n",
+       "      <td>L</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>937 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Tm                 Player Res        PTS        AST        TRB  \\\n",
+       "517  MIL  Giannis Antetokounmpo   W  33.800000   7.100000  11.000000   \n",
+       "683  ORL         Paolo Banchero   W  32.666667   7.000000  10.000000   \n",
+       "140  CHO            LaMelo Ball   L  32.416667   6.583333   4.833333   \n",
+       "204  DAL            Luka Dončić   L  32.142857   7.428571   7.571429   \n",
+       "238  DEN           Nikola Jokić   W  31.600000  10.800000  14.000000   \n",
+       "..   ...                    ...  ..        ...        ...        ...   \n",
+       "45   BOS           Jordan Walsh   L   0.000000   0.000000   1.000000   \n",
+       "598  NYK         Ariel Hukporti   L   0.000000   0.000000   3.000000   \n",
+       "526  MIL          Stanley Umude   L   0.000000   0.500000   1.000000   \n",
+       "602  NYK           Jacob Toppin   L   0.000000   0.000000   0.000000   \n",
+       "39   BOS         Jaden Springer   L   0.000000   0.000000   1.000000   \n",
+       "\n",
+       "          STL       BLK       TOV  \n",
+       "517  0.600000  1.700000  4.300000  \n",
+       "683  0.666667  1.333333  1.333333  \n",
+       "140  1.083333  0.166667  5.500000  \n",
+       "204  1.285714  0.285714  3.000000  \n",
+       "238  1.800000  1.000000  4.100000  \n",
+       "..        ...       ...       ...  \n",
+       "45   0.000000  0.000000  0.000000  \n",
+       "598  0.000000  1.000000  0.500000  \n",
+       "526  0.000000  0.000000  0.000000  \n",
+       "602  0.000000  0.000000  0.000000  \n",
+       "39   0.000000  0.000000  0.000000  \n",
+       "\n",
+       "[937 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "team_playeravg_sorted"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 46,
    "id": "c0b6aa89-f2e6-432a-af83-ac3ed5c437bb",
    "metadata": {},
@@ -3240,25 +3624,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "c548e900-53dc-45e5-aa26-1284d657fcf6",
+   "execution_count": null,
+   "id": "a9e1920f-7eb7-4cb0-8c22-c70b754b2a02",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/ryanoka/Downloads'"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import os\n",
-    "os.getcwd()"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
