Edited code notes

--- a/Python Final Project.ipynb
+++ b/Python Final Project.ipynb
@@ -2236,7 +2236,7 @@
     }
    ],
    "source": [
-    "# Create custom bins: start with -inf to 100, then regular 10-point bins\n",
+    "# Create custom bins: start with -inf to max + 10, then regular 10-point bins\n",
     "min_bin = -np.inf\n",
     "step = 10\n",
     "max_bin = int(opponent['PTS'].max())\n",
@@ -2931,7 +2931,7 @@
     "    total_wins=('Res', lambda x: (x == 'W').sum())  # Count total wins in each group\n",
     ").reset_index()\n",
     "\n",
-    "# Calculate the win percentage for each PTS_Group bin\n",
+    "# Calculate the win percentage for each TOV_Group bin\n",
     "tov_wp['win_percentage'] = tov_wp['total_wins'] / tov_wp['total_games'] * 100\n",
     "print(tov_wp)\n",
     "\n",
@@ -3006,6 +3006,7 @@
     "\n",
     "# Step 2: Group by Team, Player, and Result to get per-result averages\n",
     "team_playeravg = team_player.groupby(['Tm', 'Player', 'Res']).mean(numeric_only=True).reset_index()\n",
+    "#sort data\n",
     "team_playeravg_sorted = team_playeravg.sort_values(by='PTS', ascending=False)\n",
     "\n",
     "cle = team_playeravg_sorted[team_playeravg_sorted['Tm'] == 'CLE']\n",
